# energy-consumption

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  railway.toml
.devcontainer/: Dockerfile  devcontainer.json
api/: main.py  schemas.py
config/: training_config.yaml
dags/: training_dag.py
models/: best.pt
src/: config.py  inference.py
src/data/: clean.py  collect.py  dataset.py
src/evaluation/: metrics.py
src/model/: architecture.py
src/training/: loss.py  optimizer.py  trainer.py
