[project]
name = "energy-consumption"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "mlflow>=2.12.0",
    "apache-airflow>=2.9.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pre-commit>=4.6.0",
    "ipykernel>=6.29.0",
]
